tests/Rules/Structure/Fixtures/invalid/p_as_heading_bold.html.twig
{# 1 errors #}
<p style="font-weight: bold;">This looks like a heading but is a paragraph.</p>
<p>Regular content.</p>
